# spot

./: .env.docker  .gitignore  ALIYUN-API-FIX.md  CLAUDE.md  ENV.md  Makefile  README.md  SSL-DEPLOYMENT.md  UPLOADS-SYNC.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/scripts/: sync_enrolled_count.sql
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: admin_auth.py  admin_banners.py  admin_communities.py  admin_courses.py  admin_dashboard.py  admin_member.py  admin_orders.py  admin_students.py  admin_teachers.py  admin_users.py  ai_description.py  (+13 more)
backend/src/core/: config.py  database.py  errors.py  exceptions.py  logging.py  security.py
backend/src/models/domain/: __init__.py  admin.py  banner.py  base.py  community.py  course.py  course_student.py  member_card.py  order.py  payment.py  student.py  teacher.py  user.py  user_member.py
backend/src/models/schemas/: __init__.py  admin.py  banner.py  common.py  community.py  course.py  member_card.py  order.py  payment.py  student.py  teacher.py  user.py
backend/src/repositories/: __init__.py  base.py
backend/src/services/: __init__.py  admin_service.py  ai_description_service.py  ai_image_service.py  banner_service.py  community_service.py  course_service.py  member_card_service.py  order_service.py  payment_service.py  student_service.py  teacher_service.py  user_service.py
backend/src/utils/: __init__.py  encryption.py  geo.py  id_generator.py  masking.py  password.py
(+244 files in other folders)
